# triangle_counting

./: CMakeLists.txt  StudyPerformance.cpp  TriangleEnumeration.cpp  TriangleEnumeration.h  backtracking.cpp  backtracking.h  commandparser.cpp  commandparser.h  graph.cpp  graph.h  matchingcommand.cpp  matchingcommand.h  types.h  util.h  utilities.cpp  utilities.h  wtime.h
